--- a/game/neon-biker.html
+++ b/game/neon-biker.html
@@ -423,12 +423,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="3d-moto-simulator-2">
+                                 <a href="3d-moto-simulator-2.html">
                                  <img src="../assets/img/3dmotosimulator2/3d-moto-simulator-2.png" alt="3D Moto Simulator 2" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="3d-moto-simulator-2">3D Moto Simulator 2</a></h3>
+                              <h3><a href="3d-moto-simulator-2.html">3D Moto Simulator 2</a></h3>
                               <p class="game-meta">Motorbike | Racing | Desktop </p>
                            </div>
                         </div>
@@ -436,12 +436,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                            <a href="bike-trials-winter-2">
+                            <a href="bike-trials-winter-2.html">
                                  <img src="../assets/img/biketrialswinter2/bike-trials-winter-2.webp" alt="Bike Trials Winter 2" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="bike-trials-winter-2">Bike Trials Winter 2</a></h3>
+                              <h3><a href="bike-trials-winter-2.html">Bike Trials Winter 2</a></h3>
                               <p class="game-meta">Motorbike | Racing | Desktop </p>
                            </div>
                         </div>
@@ -449,12 +449,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                              <a href="cars-thief">
+                              <a href="cars-thief.html">
                                  <img src="../assets/img/carsthief/cars-thief.webp" alt="Cars Thief" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="cars-thief">Cars Thief</a></h3>
+                              <h3><a href="cars-thief.html">Cars Thief</a></h3>
                               <p class="game-meta">Motorbike | Racing | Desktop </p>
                            </div>
                         </div>
@@ -462,12 +462,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="e-scooter">
+                                 <a href="e-scooter.html">
                                  <img src="../assets/img/escooter/e-scooter.png" alt="E-Scooter" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="e-scooter">E-Scooter</a></h3>
+                              <h3><a href="e-scooter.html">E-Scooter</a></h3>
                               <p class="game-meta">Motorbike | Racing | Desktop </p>
                            </div>
                         </div>
@@ -475,12 +475,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="highway-rider-extreme">
+                                 <a href="highway-rider-extreme.html">
                                  <img src="../assets/img/highwayriderextreme/highway-rider-extreme.png" alt="Highway Rider Extreme" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="highway-rider-extreme">Highway Rider Extreme</a></h3>
+                              <h3><a href="highway-rider-extreme.html">Highway Rider Extreme</a></h3>
                               <p class="game-meta">Motorbike | Racing | Desktop </p>
                            </div>
                         </div>
@@ -488,12 +488,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="icycle">
+                                 <a href="icycle.html">
                                  <img src="../assets/img/icycle/icycle.png" alt="Icycle" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="icycle">Icycle</a></h3>
+                              <h3><a href="icycle.html">Icycle</a></h3>
                               <p class="game-meta">Bike | Racing | Desktop </p>
                            </div>
                         </div>
@@ -501,12 +501,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="moto-road-rash-3d">
+                                 <a href="moto-road-rash-3d.html">
                                  <img src="../assets/img/motoroadrash3d/motoroadrash3d.png" alt="Moto Road Rash 3D" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="moto-road-rash-3d">Moto Road Rash 3D</a></h3>
+                              <h3><a href="moto-road-rash-3d.html">Moto Road Rash 3D</a></h3>
                               <p class="game-meta">Motorbike | Racing | Desktop </p>
                            </div>
                         </div>
@@ -514,12 +514,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="moto-x3m-2">
+                                 <a href="moto-x3m-2.html">
                                  <img src="../assets/img/moto3mx/moto-x3m-2.png" alt="Moto X3M 2" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="moto-x3m-2">Moto X3M 2</a></h3>
+                              <h3><a href="moto-x3m-2.html">Moto X3M 2</a></h3>
                               <p class="game-meta">Motorbike | Moto X3M | Desktop </p>
                            </div>
                         </div>
@@ -527,12 +527,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="moto-x3m-bike-race">
+                                 <a href="moto-x3m-bike-race.html">
                                  <img src="../assets/img/moto3mx/moto-x3m-bike-race-logo.webp" alt="Moto X3M Bike Race" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="moto-x3m-bike-race">Moto X3M Bike Race</a></h3>
+                              <h3><a href="moto-x3m-bike-race.html">Moto X3M Bike Race</a></h3>
                               <p class="game-meta">Motorbike | Moto X3M | Desktop </p>
                            </div>
                         </div>
@@ -540,12 +540,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="moto-x3m-pool-party">
+                                 <a href="moto-x3m-pool-party.html">
                                  <img src="../assets/img/motox3mpoolparty/moto-x3m-pool-party.webp" alt="Moto X3M Pool Party" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="moto-x3m-pool-party">Moto X3M Pool Party</a></h3>
+                              <h3><a href="moto-x3m-pool-party.html">Moto X3M Pool Party</a></h3>
                               <p class="game-meta">Motorbike | Moto X3M | Desktop </p>
                            </div>
                         </div>
@@ -553,12 +553,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="moto-x3m-spooky-land">
+                                 <a href="moto-x3m-spooky-land.html">
                                  <img src="../assets/img/motox3mspookyland/moto-x3m-spooky-land.webp" alt="Moto X3M Spooky Land" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="moto-x3m-spooky-land">Moto X3M Spooky Land</a></h3>
+                              <h3><a href="moto-x3m-spooky-land.html">Moto X3M Spooky Land</a></h3>
                               <p class="game-meta">Motorbike | Moto X3M | Desktop </p>
                            </div>
                         </div>
@@ -566,12 +566,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="moto-x3m-winter">
+                                 <a href="moto-x3m-winter.html">
                                  <img src="../assets/img/motox3mwinter/moto-x3m-winter.webp" alt="Moto X3M Winter" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="moto-x3m-winter">Moto X3M Winter</a></h3>
+                              <h3><a href="moto-x3m-winter.html">Moto X3M Winter</a></h3>
                               <p class="game-meta">Motorbike | Moto X3M | Desktop </p>
                            </div>
                         </div>
@@ -579,12 +579,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="neon-biker">
+                                 <a href="neon-biker.html">
                                  <img src="../assets/img/neonbiker/neon-biker.png" alt="Neon Biker" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="neon-biker">Neon Biker</a></h3>
+                              <h3><a href="neon-biker.html">Neon Biker</a></h3>
                               <p class="game-meta">Motorbike | Racing | Desktop </p>
                            </div>
                         </div>
@@ -592,12 +592,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="neon-racer">
+                                 <a href="neon-racer.html">
                                  <img src="../assets/img/neonracer/neon-racer.png" alt="Neon Racer" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="neon-racer">Neon Racer</a></h3>
+                              <h3><a href="neon-racer.html">Neon Racer</a></h3>
                               <p class="game-meta">Motorbike | Racing | Desktop</p>
                            </div>
                         </div>
@@ -605,12 +605,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="super-bike-the-champion">
+                                 <a href="super-bike-the-champion.html">
                                  <img src="../assets/img/superbikethechampion/super-bike-the-champion-logo.webp" alt="Super Bike The Champion" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="super-bike-the-champion">Super Bike The Champion</a></h3>
+                              <h3><a href="super-bike-the-champion.html">Super Bike The Champion</a></h3>
                               <p class="game-meta">Motorbike | Racing | Desktop</p>
                            </div>
                         </div>
@@ -618,12 +618,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="traffic-tom">
+                                 <a href="traffic-tom.html">
                                  <img src="../assets/img/traffictom/traffic-tom.png" alt="Traffic Tom" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="traffic-tom">Traffic Tom</a></h3>
+                              <h3><a href="traffic-tom.html">Traffic Tom</a></h3>
                               <p class="game-meta">Motorbike | Racing | Desktop</p>
                            </div>
                         </div>
@@ -631,12 +631,12 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="games-single-item img-contain-isotope">
                            <div class="games-thumb">
-                                 <a href="wheelie-bike">
+                                 <a href="wheelie-bike.html">
                                  <img src="../assets/img/wheeliebike/wheelie-bike.png" alt="Wheelie Bike" />
                                  </a>
                            </div>
                            <div class="games-desc">
-                              <h3><a href="wheelie-bike">Wheelie Bike</a></h3>
+                              <h3><a href="wheelie-bike.html">Wheelie Bike</a></h3>
                               <p class="game-meta">Bike | Racing | Desktop</p>
                            </div>
                         </div>
